name:                blog
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      src
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
